Left of banner done

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,42 @@
         </div>
     </section>
     <!-- ======================= Nav Bar End ================= -->
-    
+
+
+    <!-- ======================= Banner Part Start ================= -->
+
+    <section id="banner">
+        <div class="container">
+            <div class="row my-5 py-5">
+                <div class="col-md-6 bannerLeft">
+                    <h1 class="banner-title">
+                        <span class="d-block">Get ahead of the competition. </span>
+                        <span class="d-block">Gain work experience today!</span>
+                    </h1>
+                    <p class="banner-description py-4">Raise your profile and employability with the help of Techway Placements.</p>
+
+                    <div class="bannerForm">
+                        <form class="form-inline">
+                            <input type="text" class="form-control mb-2 mr-sm-2" id="email"
+                                placeholder="Your work email">
+                            <button type="submit" class="btn btn-primary mb-2 ml-3">GET STARTED</button>
+                        </form>
+                    </div>
+                    <p>
+                        <img class="img-fluid mr-2" src="images/check.png" alt="check">
+                        Top Rated Programs
+                    </p>
+
+                </div>
+                <div class="col-md-6"></div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ======================= Banner Part End ================= -->
+
+
+
 
     <!-- JS FILES -->
     <script src="js/jquery.slim.js"></script>
