Banner responsive 75% done

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
     <!-- ======================= Nav Bar Start ================= -->
     <section id="navBar">
-        <div class="container">
+        <div class="container mt-lg-4">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">Logo here...</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -59,28 +59,30 @@
 
     <section id="banner">
         <div class="container">
-            <div class="row my-5 py-5">
-                <div class="col-md-6 bannerLeft">
+            <div class="row my-5 py-md-5">
+                <div class="col-md-5 bannerLeft">
                     <h1 class="banner-title">
                         <span class="d-block">Get ahead of the competition. </span>
                         <span class="d-block">Gain work experience today!</span>
                     </h1>
-                    <p class="banner-description py-4">Raise your profile and employability with the help of Techway Placements.</p>
+                    <p class="banner-description py-2 py-md-4">Raise your profile and employability with the help of Techway Placements.</p>
 
                     <div class="bannerForm">
                         <form class="form-inline">
                             <input type="text" class="form-control mb-2 mr-sm-2" id="email"
-                                placeholder="Your work email">
+                                placeholder="Your work email" required>
                             <button type="submit" class="btn btn-primary mb-2 ml-3">GET STARTED</button>
                         </form>
                     </div>
-                    <p>
+                    <p class="topRate pt-1">
                         <img class="img-fluid mr-2" src="images/check.png" alt="check">
                         Top Rated Programs
                     </p>
 
                 </div>
-                <div class="col-md-6"></div>
+                <div class="col-md-5 pl-md-5 bannerRight">
+                    <img class="img-fluid pl-md-3" src="images/banner.png" alt="banner Image">
+                </div>
             </div>
         </div>
     </section>
