Banner responsive 100% done

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
 
     <section id="banner">
         <div class="container">
-            <div class="row my-5 py-md-5">
+            <div class="row my-5 py-lg-5">
                 <div class="col-md-5 bannerLeft">
                     <h1 class="banner-title">
                         <span class="d-block">Get ahead of the competition. </span>
@@ -88,7 +88,13 @@
     </section>
 
     <!-- ======================= Banner Part End ================= -->
-
+<section id="featuredIn">
+    <div class="container">
+        <div class="featured">
+            <h5>FEATURED IN</h5>
+        </div>
+    </div>
+</section>
 
 
 
