Techway Placements done

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,8 @@
                         <span class="d-block">Get ahead of the competition. </span>
                         <span class="d-block">Gain work experience today!</span>
                     </h1>
-                    <p class="banner-description py-2 py-md-4">Raise your profile and employability with the help of Techway Placements.</p>
+                    <p class="banner-description py-2 py-md-4">Raise your profile and employability with the help of
+                        Techway Placements.</p>
 
                     <div class="bannerForm">
                         <form class="form-inline">
@@ -80,21 +81,125 @@
                     </p>
 
                 </div>
-                <div class="col-md-5 pl-md-5 bannerRight">
-                    <img class="img-fluid pl-md-3" src="images/banner.png" alt="banner Image">
+                <div class="col-md-5  bannerRight">
+                    <!-- <img class="img-fluid pl-md-3" src="images/banner.png" alt="banner Image"> -->
                 </div>
             </div>
         </div>
     </section>
 
     <!-- ======================= Banner Part End ================= -->
-<section id="featuredIn">
-    <div class="container">
-        <div class="featured">
-            <h5>FEATURED IN</h5>
+
+    <!-- ========================= FEATURED IN Start ==================== -->
+    <section id="featuredIn">
+        <div class="container mt-lg-5 pt-lg-5">
+            <div class="featured d-flex justify-content-center">
+                <div class="feturedContent">
+                    <h5 class="text-center">FEATURED IN</h5>
+                    <div class="feturedImg">
+                        <img class="img-fluid pr-lg-4 pr-2" src="images/yahoo-finance.png" alt="yahoo">
+                        <img class="img-fluid pl-lg-4 pl-2" src="images/business-insidedr.png" alt="business">
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-</section>
+        </div>
+    </section>
+    <!-- ========================= FEATURED IN End ==================== -->
+
+    <!-- ========================= PREMEUM PART START ==================== -->
+
+    <section id="premeumWork">
+        <div class="container pt-lg-5 pt-3 extraPadding pb-lg-5 mb-lg-5">
+            <div class="">
+                <h2 class="text-center my-lg-5 pb-lg-4"> <span class="colorText">Premium work</span> experience that
+                    brings</h2>
+                <div class="card-deck">
+                    <div class="card">
+                        <img src="images/premium-work-1.png" class="card-img-top" alt="premeumWork">
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Skills training that empowers </h3>
+                            <p class="card-text">Empower yourself and drive your career forward by gaining skills and
+                                experience that today's employers value.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="images/premium-work-2.png" class="card-img-top" alt="premeumWork">
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Mentorship from industry experts</h3>
+                            <p class="card-text">Receive personalised guidance, advice and feedback from a tech mentor
+                                and see yourself grow and improve. </p>
+
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="images/premium-work-3.png" class="card-img-top" alt="premeumWork">
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Learning mobility</h3>
+                            <p class="card-text">Complete any of our program without the hassle of commute. Build
+                                experiecne where you are in the world. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ========================= PREMEUM PART End ==================== -->
+
+
+    <!-- ========================= Our Programs Start ==================== -->
+    <section id="ourProgram">
+        <div class="container pt-lg-5 pt-3 extraPadding pb-lg-5 mb-lg-5">
+            <h1 class="text-center pb-lg-5">Our <span class="colorText">Programs</span></h1>
+            <div class="programComponants px-3 px-md-0">
+                <div class=" programElement d-flex justify-content-between text-center ">
+                    <div class="element-separator py-4">
+                        <h5>Business Analyst</h5>
+                    </div>
+                    <div class="element-separator py-4">
+                        <h5>Data Analysis</h5>
+                    </div>
+                </div>
+                <div class=" programElement d-flex justify-content-between text-center pt-lg-2 mt-lg-4">
+                    <div class="element-separator py-4">
+                        <h5>Project Management</h5>
+                    </div>
+                    <div class="element-separator py-4">
+                        <h5>Software Testing</h5>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ====================Techway Placements================= -->
+
+            <div class="row my-lg-5 py-lg-5">
+                <div class="col-md-6 mt-lg-5 techwayLeft">
+                    <h2 class="py-3">
+                        <span class="colorText">Techway Placements</span> redefines gaining valuable work experience.
+                    </h2>
+                    <p>We've all been there. You're looking for your first job, but you can't find one because you don't
+                        have experience. But, how do you get experience, if you don't have a job? It's a classic
+                        catch-22 that we seek to address here at Techway Placements.</p>
+                    <p class="py-2">We are redefining the way young people access the work experience they need to get
+                        the best possible start to their careers. By assigning them to work with industry expert
+                        mentors, candidates build valuable experience that will help them secure and sustain employment.
+                    </p>
+                    <button class="btn button">Get Started</button>
+                </div>
+                <div class="col-md-6 mt-lg-5 techwayRight mt-4 mt-md-0">
+                    <img class="img-fluid" src="images/vedio-player.png" alt="vedio">
+                    <div class="playBtn text-center">
+                        <i class="fas fa-play"></i>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- ========================= Our Programs End ==================== -->
+
 
 
 
