--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
     <section id="premeumWork">
         <div class="container pt-lg-5 pt-3 extraPadding pb-lg-5 mb-lg-5">
             <div class="">
-                <h2 class="text-center my-lg-5 pb-lg-4"> <span class="colorText">Premium work</span> experience that
+                <h2 class="text-center mb-4 my-lg-5 pb-lg-4"> <span class="colorText">Premium work</span> experience that
                     brings</h2>
                 <div class="card-deck">
                     <div class="card">
@@ -150,22 +150,22 @@
 
     <!-- ========================= Our Programs Start ==================== -->
     <section id="ourProgram">
-        <div class="container pt-lg-5 pt-3 extraPadding pb-lg-5 mb-lg-5">
-            <h1 class="text-center pb-lg-5">Our <span class="colorText">Programs</span></h1>
-            <div class="programComponants px-3 px-md-0">
-                <div class=" programElement d-flex justify-content-between text-center ">
-                    <div class="element-separator py-4">
+        <div class="container pt-lg-5 pt-3 extraPadding mb-lg-5">
+            <h1 class="text-center pb-lg-5 mb-4">Our <span class="colorText">Programs</span></h1>
+            <div class="programComponants px-lg-3 px-md-0">
+                <div class=" programElement programResDevice d-flex justify-content-between text-center ">
+                    <div class="element-separator py-4 mb-2 mb-sm-0">
                         <h5>Business Analyst</h5>
                     </div>
-                    <div class="element-separator py-4">
+                    <div class="element-separator py-4 mb-2 mb-sm-0">
                         <h5>Data Analysis</h5>
                     </div>
                 </div>
                 <div class=" programElement d-flex justify-content-between text-center pt-lg-2 mt-lg-4">
-                    <div class="element-separator py-4">
+                    <div class="element-separator py-4 mb-2 mb-sm-0">
                         <h5>Project Management</h5>
                     </div>
-                    <div class="element-separator py-4">
+                    <div class="element-separator py-4 mb-2 mb-sm-0">
                         <h5>Software Testing</h5>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
 
             <!-- ====================Techway Placements================= -->
 
-            <div class="row my-lg-5 py-lg-5">
+            <div class="row my-lg-5 py-lg-5 mt-md-5">
                 <div class="col-md-6 mt-lg-5 techwayLeft">
                     <h2 class="py-3">
                         <span class="colorText">Techway Placements</span> redefines gaining valuable work experience.
@@ -199,6 +199,27 @@
     </section>
 
     <!-- ========================= Our Programs End ==================== -->
+
+    <!-- ========================= Success Stories Start ==================== -->
+    <section id="successStory">
+        <div class="container pt-lg-5 pt-3 extraPadding pb-lg-5 mb-lg-5">
+            <h1 class="text-center pb-lg-5 mb-4"><span class="colorText">Success Stories</span> from Future Digital Leaders</h1>
+            <div class="row">
+                <div class="col-md-6 successLeft">
+                    <h5 class="text-left story pb-3">FEATURED STORY</h5>
+                    <h5 class="stufBrif">
+                        All the staffs I corresponded with were very helpful and friendly, they explained in-depth to me exactly what they do...
+                    </h5>
+                    <p class="py-2">Wilfried Nguethe</p>
+                    <button class="btn button">Read Full Story</button>
+                </div>
+                <div class="col-md-6">
+                    <img class="img-fluid" src="images/success-stories.png" alt="success story">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ========================= Success Stories End ==================== -->
 
 
 
