--- a/src/index.html
+++ b/src/index.html
@@ -206,14 +206,14 @@
             <h1 class="text-center pb-lg-5 mb-4"><span class="colorText">Success Stories</span> from Future Digital Leaders</h1>
             <div class="row">
                 <div class="col-md-6 successLeft">
-                    <h5 class="text-left story pb-3">FEATURED STORY</h5>
+                    <h5 class="text-left story pb-3 mt-4 mt-md-0">FEATURED STORY</h5>
                     <h5 class="stufBrif">
                         All the staffs I corresponded with were very helpful and friendly, they explained in-depth to me exactly what they do...
                     </h5>
                     <p class="py-2">Wilfried Nguethe</p>
                     <button class="btn button">Read Full Story</button>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mt-3 mt-sm-0">
                     <img class="img-fluid" src="images/success-stories.png" alt="success story">
                 </div>
             </div>
