employment market done

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
     <!-- ======================= Nav Bar Start ================= -->
     <section id="navBar">
-        <div class="container mt-lg-4">
+        <div class="container pt-lg-4">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">Logo here...</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -58,8 +58,8 @@
     <!-- ======================= Banner Part Start ================= -->
 
     <section id="banner">
-        <div class="container">
-            <div class="row my-5 py-lg-5">
+        <div class="container extraMarginbyPadding">
+            <div class="row py-lg-5">
                 <div class="col-md-5 bannerLeft">
                     <h1 class="banner-title">
                         <span class="d-block">Get ahead of the competition. </span>
@@ -92,7 +92,7 @@
 
     <!-- ========================= FEATURED IN Start ==================== -->
     <section id="featuredIn">
-        <div class="container mt-lg-5 pt-lg-5">
+        <div class="container extraMarginbyPadding pt-lg-5">
             <div class="featured d-flex justify-content-center">
                 <div class="feturedContent">
                     <h5 class="text-center">FEATURED IN</h5>
@@ -217,9 +217,60 @@
                     <img class="img-fluid" src="images/success-stories.png" alt="success story">
                 </div>
             </div>
+
+            <div class="card-deck mt-lg-5 mt-3">
+                <div class="card">
+                  <img src="images/lakshami-people.png" class="card-img-top" alt="lakshami">
+                  <div class="card-body">
+                    <h3 class="card-title">Lakshmi Viswaprakash <i class="fas fa-chevron-right"></i></h3>
+                    <p class="card-text">Data Analysis</p>
+                  </div>
+                </div>
+                <div class="card">
+                    <img src="images/lakshami-people.png" class="card-img-top" alt="lakshami">
+                  <div class="card-body">
+                    <h3 class="card-title">Sharada Telkar <i class="fas fa-chevron-right"></i></h3>
+                    <p class="card-text">Software Testing</p>
+                  </div>
+                </div>
+                <div class="card">
+                    <img src="images/lakshami-people.png" class="card-img-top" alt="lakshami">
+                  <div class="card-body">
+                    <h3 class="card-title">Rares Velker <i class="fas fa-chevron-right"></i></h3>
+                    <p class="card-text">Software Testing</p>
+                  </div>
+                </div>
+              </div>
         </div>
     </section>
     <!-- ========================= Success Stories End ==================== -->
+
+    <!-- ========================= employment market Part Start ==================== -->
+
+    <section id="employmentMarket">
+        <div class="container pt-lg-5 pt-3 extraPadding pb-lg-5 mb-lg-5">
+            <h1 class="text-center pb-lg-5 mb-4">The <span class="colorText">employment market</span> is in a downturn</h1>
+            <div class="row">
+                <div class="col-md-6 eployLeft d-flex justify-content-center">
+                <div class="w-75 py-5">
+                    <h2 class=" text-center pb-3">There could be lesser graduate jobs this year. Are you prepared for the competition?</h2>
+                <p class=" text-center">Graduate vacancies have faced a downturn in recent years, and this is further compounded by the COVID-19 pandemic, making the immediate future of the job market uncertain. 
+                </p>
+                </div>
+                </div>
+                <div class="col-md-6 pl-5 eployRight">
+                    <p class="pl-4">Young people could be facing bleak career prospects as a result of graduating in one of the toughest job markets in years. According to World Bank, we are set to experience the deepest recession since World War Two, leading to increased unemployment and pullback in hiring across sectors.</p>
+
+                    <p class="pl-4">Milkround, a UK-based graduate jobs website, found that only 18% of  graduates are able to secure jobs this year. That is 42% lesser compared to the usual 60% annual graduate employment. ZipRecruiter, a US-based jobs website, also noted that the available jobs with university </p>
+
+                    <p class="pl-4 eployBorder mt-3">Let these figures show you why work experience matters more than ever for you to make your way in today's job market.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ========================= employment market Part End ==================== -->
 
 
 
