Be a candidate  done

--- a/src/index.html
+++ b/src/index.html
@@ -289,12 +289,49 @@
         <h2 class="pl-4 ml-1"> <span class="colorText">On-demand</span> learning and support</h2>
         <p class="pl-4 ml-1 py-2">Get into a program that allows for greater opportunity to remotely build solid experience by completing projects relevant to your target sector and profession.</p>
 
-        <ul class="list-unstyled pl-4 ml-1">
-            <li> <img class="img-fluid mr-2" src="images/check.png" alt=" check"> Flexible and at your own terms. ( Completed online ) </li>
-            <li> <img class="img-fluid mr-2" src="images/check.png" alt=" check"> Projects based on real situations and data</li>
-            <li> <img class="img-fluid mr-2" src="images/check.png" alt=" check"> Do it anywhere in the world</li>
+        <ul class="list-unstyled pr-4 mr-1">
+            <div class="d-flex ml-4">
+                <img class="img-fluid mr-2 mt-2" src="images/check.png" alt=" check">
+             <li>Flexible and at your own terms. (Completed online)</li>
+            </div>
+            <div class="d-flex ml-4">
+                <img class="img-fluid mr-2 mt-2" src="images/check.png" alt=" check"> 
+                <li>Projects based on real situations and data</li>
+            </div>
+           <div class="d-flex ml-4">
+            <img class="img-fluid mr-2 mt-2" src="images/check.png" alt=" check"> 
+            <li>Do it anywhere in the world</li>
+           </div>
         </ul>
 
+    </div>
+</div>
+
+
+<div class="row employDown mt-lg-5 pt-lg-5">
+    
+    <div class="col-md-6 employDownRight mt-lg-5  pr-5">
+        <h2 class="pr-4 mr-1"> Be a <span class="colorText">candidate </span> with work experience employers prefer</h2>
+        <p class="pr-4 mr-1 py-2">With any of our programs, you can increase the likelihood of success in your job hunt by building valuable work experience in your field. It has been proven that:</p>
+
+        <ul class="list-unstyled pr-4 mr-1">
+            <div class="d-flex">
+                <img class="img-fluid mr-2 mt-2" src="images/check.png" alt=" check">
+             <li> Among graduates, recruiters only ever contact those with valuable work experience. </li>
+            </div>
+            <div class="d-flex">
+                <img class="img-fluid mr-2 mt-2" src="images/check.png" alt=" check"> 
+                <li> Having work experience in your chosen sectors displays to employers you have done your homework.</li>
+            </div>
+           <div class="d-flex">
+            <img class="img-fluid mr-2 mt-2" src="images/check.png" alt=" check"> 
+            <li> Graduates with work experience are 4 times more like to receive a job offer.</li>
+           </div>
+        </ul>
+
+    </div>
+    <div class="col-md-6 mt-lg-5 pl-5">
+        <img class="img-fluid" src="images/be-a-cordinate.png" alt="be a candidate">
     </div>
 </div>
 
