employment market done

--- a/src/index.html
+++ b/src/index.html
@@ -335,6 +335,32 @@
     </div>
 </div>
 
+<div class="row employDown mt-lg-5 pt-lg-5">
+    <div class="col-md-6 mt-lg-5">
+        <img class="img-fluid" src="images/drive-your-potential.png" alt="drive your protential">
+    </div>
+    <div class="col-md-6 employDownRight mt-lg-5  pl-5">
+        <h2 class="pl-4 ml-1"> Drive your <span class="colorText">potential and career outcome</span></h2>
+        <p class="pl-4 ml-1 py-2">Develop workplace skills and experience that will help you change your career outcome for the better. Get evidence of your experience with a valid reference.</p>
+
+        <ul class="list-unstyled pr-4 mr-1">
+            <div class="d-flex ml-4">
+                <img class="img-fluid mr-2 mt-2" src="images/check.png" alt=" check">
+             <li>Understand and nourish your strengths and competitiveness</li>
+            </div>
+            <div class="d-flex ml-4">
+                <img class="img-fluid mr-2 mt-2" src="images/check.png" alt=" check"> 
+                <li>Reference on completion to boost employability</li>
+            </div>
+           <div class="d-flex ml-4">
+            <img class="img-fluid mr-2 mt-2" src="images/check.png" alt=" check"> 
+            <li>Highlight experience on CV to improve credibility</li>
+           </div>
+        </ul>
+
+    </div>
+</div>
+
 <!-- ========================= employment market Down Part End ==================== -->
 
         </div>
