Fully responsive done

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
     <!-- ======================= Banner Part Start ================= -->
 
     <section id="banner" class="banner">
-        <div class="container extraMarginbyPadding">
+        <div class="container extraMarginbyPadding px-3 px-sm-0">
             <div class="row py-lg-5">
                 <div class="col-md-5 bannerLeft">
                     <h1 class="banner-title">
@@ -263,7 +263,7 @@
 
                     <p class="pl-md-4">Milkround, a UK-based graduate jobs website, found that only 18% of  graduates are able to secure jobs this year. That is 42% lesser compared to the usual 60% annual graduate employment. ZipRecruiter, a US-based jobs website, also noted that the available jobs with university </p>
 
-                    <p class="pl-md-4 eployBorder mt-3">Let these figures show you why work experience matters more than ever for you to make your way in today's job market.
+                    <p class="pl-md-4 pl-2 pl-sm-0 eployBorder mt-3">Let these figures show you why work experience matters more than ever for you to make your way in today's job market.
                     </p>
                 </div>
             </div>
@@ -362,7 +362,7 @@
     <!-- ======================= Footer Part Start ================= -->
 
     <section id="footer" class="footer banner">
-        <div class="container extraMarginbyPadding">
+        <div class="container extraMarginbyPadding px-3 px-sm-0">
             <div class="row py-lg-5">
                 <div class="col-md-5 bannerLeft">
                     <h1 class="banner-title">
@@ -456,7 +456,7 @@
                     </div>
                    
                 </div>
-                <div class="copyright d-flex justify-content-between px-md-5 extraPadding ml-md-5">
+                <div class="copyright d-flex justify-content-between mt-md-5 mt-3 mt-sm-0 pt-md-5 pt-3 pt-sm-0 mr-md-5 px-md-5 extraPadding ml-md-5">
                     <div> <small>2021. All Rights Reserved.</small></div>
                     <div> <small>Privacy | Terms & Conditions</small></div>
                  </div>
