About us done without responsive

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Techway-Latest project</title>
+    <title>Home</title>
 
     <!-- --------------- Google Fonts -------------- -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -95,10 +95,12 @@
         <div class="container extraMarginbyPadding pt-lg-5">
             <div class="featured d-flex justify-content-center">
                 <div class="feturedContent">
-                    <h5 class="text-center">FEATURED IN</h5>
-                    <div class="feturedImg">
-                        <img class="img-fluid pr-lg-4 pr-2" src="images/yahoo-finance.png" alt="yahoo">
-                        <img class="img-fluid pl-lg-4 pl-2" src="images/business-insidedr.png" alt="business">
+                    <h5 class="text-center pt-lg-5 mt-lg-5">FEATURED IN</h5>
+                    <div class="feturedImg mb-lg-5 pb-lg-5">
+                        <img class="img-fluid pr-lg-4 pr-2" src="images/metro.png" alt="metro">
+                        <img class="img-fluid pl-lg-4 pl-2" src="images/itv.png" alt="itv">
+                        <img class="img-fluid pl-lg-4 pl-2" src="images/bbc.png" alt="bbc">
+                        <img class="img-fluid pl-lg-4 pl-2" src="images/theGuardian.png" alt="theGuardian">
                     </div>
                 </div>
             </div>
